<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@color/firstColor"
    tools:context=".error">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/txtErrorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errorDefault"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnErrorBack"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/secondColor"
            android:onClick="backToMenu"
            android:text="@string/btnErrorBack"
            app:cornerRadius="0dp" />
    </LinearLayout>
</FrameLayout>