<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/Theme.GeoSearch"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:background="@color/firstColor"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/txtSearchTitle"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:text="@string/searchTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/txtSearchQuery"
            android:layout_width="369dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/white"
            android:elegantTextHeight="false"
            android:hint="@string/searchQueryHint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:padding="5dp"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="444dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/txtMainSubtit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainSubtit1"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TableLayout
            android:id="@+id/countriesTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:background="@color/background"
                    android:contentDescription="@string/profLoc"
                    android:onClick="goToBrazil"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/br"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:background="@color/background"
                    android:contentDescription="@string/profLoc"
                    android:onClick="goToNorway"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/no"
                    tools:ignore="SpeakableTextPresentCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:background="@color/background"
                    android:contentDescription="@string/profLoc"
                    android:onClick="goToFrance"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/fr"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:background="@color/background"
                    android:contentDescription="@string/profLoc"
                    android:onClick="goToAustralia"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/au"
                    tools:ignore="SpeakableTextPresentCheck" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_marginTop="11dp"
        android:background="@color/firstColor"
        app:itemIconSize="45dp"
        app:itemIconTint="@color/secondColor"
        app:itemTextColor="@color/secondColor"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu_main" />

</androidx.constraintlayout.widget.ConstraintLayout>